Create Playbooks GS guide
Review comments

Create Getting Started with Ansible Playbooks Guide

https://issues.redhat.com/browse/AAP-18980

--- a/downstream/assemblies/playbooks/assembly-networking-playbook.adoc
+++ b/downstream/assemblies/playbooks/assembly-networking-playbook.adoc
@@ -1,6 +1,6 @@
 [id="assembly-networking-playbook"]
 
-= Use a Playbook  to Establish a connection to a managed node
+= Use a Playbook to establish a connection to a managed node
 
 To confirm your credentials, you can connect to a network device manually and retrieve its configuration. Replace the sample user and device name with your real credentials. 
 
