--- a/downstream/modules/playbooks/ref-how-do-playbooks-work.adoc
+++ b/downstream/modules/playbooks/ref-how-do-playbooks-work.adoc
@@ -4,11 +4,17 @@
 
 Ansible Playbooks are lists of tasks that automatically execute for your specified inventory or groups of hosts. 
 One or more Ansible tasks can be combined to make a play, that is, an ordered grouping of tasks mapped to specific hosts.
+
 Tasks are executed in the order in which they are written. 
+
 A playbook can include one or more plays. 
-A playbook is composed of one or more `plays`` in an ordered list. 
+
+A playbook is composed of one or more `plays` in an ordered list. 
+
 The terms `playbook` and `play` are sports analogies. 
+
 Each play executes part of the overall goal of the playbook, running one or more tasks. 
+
 Each task calls an Ansible module.
 
 Playbook::
