--- a/downstream/modules/playbooks/ref-how-to-use-ansible-playbooks.adoc
+++ b/downstream/modules/playbooks/ref-how-to-use-ansible-playbooks.adoc
@@ -5,18 +5,18 @@
 Ansible uses the YAML syntax. 
 YAML is a human-readable language that enables you to create playbooks without having to learn a complicated coding language.
 
-For more information on YAML, see YAML Syntax and consider installing an add-on for your text editor (see Other Tools and Programs) to help you write clean YAML syntax in your playbooks.
+For more information on YAML, see YAML Syntax and consider installing an add-on for your text editor, see link:https://docs.ansible.com/ansible/latest/community/other_tools_and_programs.html#other-tools-and-programs[Other Tools and Programs] to help you write clean YAML syntax in your playbooks.
 
 There are two ways of using Ansible Playbooks: 
 
 * From the _command line interface_ (CLI) 
-* Using {PlatformNames}'s push-button deployments.
+* Using {PlatformName}'s push-button deployments.
 
 == From the CLI
 After installing the open source Ansible project or {PlatformName} by using
 
 ----
-sudo dnf install ansible
+$ sudo dnf install ansible
 ----
 in the {RHEL} CLI, you can use the `ansible-playbook` command to run Ansible Playbooks.
 
