Fixed snippet callins and other minor changes

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -139,11 +139,16 @@
 // Top level menu definitions for use only when selections go 3 levels deep.
 :MenuAE: Automation Execution
 :MenuAC: Automation Content
+:MenuAD: Automation Decisions
+:MenuAA: Automation MenuAnalytics
+:MenuAM: Access Management
+:MenuAL: Ansible Lightspeed
 
 // Automation Execution (aka automation controller menu items)
 :MenuAEJobs: menu:{MenuAE}[Jobs]
 :MenuAETemplates: menu:{MenuAE}[Templates]
 :MenuAESchedules: menu:{MenuAE}[Schedules]
+:MenuAEProjects: menu:{MenuAE}[Projects]
 
 // Automation Execution > Infrastructure
 // first add attribute for MenuTopAE, for example {MenuTopAE} {MenuACInfrastructureTopology}.
@@ -164,10 +169,11 @@
 :MenuAEAdminSettings: menu:Administration[Settings]
 
 // Automation Decisions (aka event driven automation menu selections)
-:MenuADRuleAudit: menu:Automation Decisions[Rule Audit]
-:MenuADRulebookActivations: menu:Automation Decisions[Rulebook Activations]
-:MenuADProjects: menu:Automation Decisions[Projects]
-:MenuADDecisionEnvironments: menu:Automation Decisions[Decision Environments]
+:MenuADRuleAudit: menu:{MenuAD}[Rule Audit]
+:MenuADRulebookActivations: menu:{MenuAD}[Rulebook Activations]
+:MenuADProjects: menu:{MenuAD}[Projects]
+:MenuADDecisionEnvironments: menu:{MenuAD}[Decision Environments]
+:MenuADDecisionEnvironments: menu:{MenuAD}[Event Sources]
 
 // Automation Content (aka automation hub menu selections)
 :MenuACNamespaces: menu:{MenuAC}[Namespaces]
@@ -179,33 +185,32 @@
 :MenuACAdminSignatureKeys: menu:Administration[Signature Keys]
 :MenuACAdminRepositories: menu:Administration[Repositories]
 :MenuACAdminRemoteRegistries: menu:Administration[Remote Registries]
-:MenuACAdminTasks: menu:Administration[tasks]
+:MenuACAdminTasks: menu:Administration[Tasks]
 :MenuACAdminCollectionApproval: menu:Administration[Collection Approvals]
 :MenuACAdminRemotes: menu:Administration[Remotes]
 
 // Automation Analytics menu selections
 // --- the following are not in the current build but may be added later ---
-//:menu_job-explorer: menu:Automation Analytics[Job Explorer]
-//:MenuADministration-activity-stream: menu:Automation Controller[Views > Activity Stream]
-//:menu_savings-plan: menu:Automation Analytics[Savings Planner]
-//:menu_clusters: menu:Automation Analytics[Clusters]
-:MenuAAReports: menu:Automation Analytics[Reports]
-:MenuAAAutomationCalc: menu:Automation Analytics[Automation Calculator]
-:MenuAAAnalyticsBuilder: menu:Automation Analytics[Analytics builder]
-:MenuAAHostMetrics: menu:Automation Analytics[Host Metrics]
-:MenuAAHostSubscriptionUse: menu:Automation Analytics[Subscription Usage]
+//:MenuAAJobExplorer: menu:{MenuAA}[Job Explorer]
+//:MenuAASavingsPlanner: menu:{MenuAA}[Savings Planner]
+//:MenuAAClusters: menu:{MenuAA}[Clusters]
+//:MenuAAReports: menu:{MenuAA}[Reports]
+//:MenuAAAnalyticsBuilder: menu:{MenuAA}[Analytics builder]
+:MenuAAAutomationCalc: menu:{MenuAA}[Automation Calculator]
+:MenuAAHostMetrics: menu:{MenuAA}[Host Metrics]
+:MenuAAHostSubscriptionUse: menu:{MenuAA}[Subscription Usage]
 
 // Access Management menu selections
 // First include attribute
-:MenuAMAuthentication: menu:Access Management[Authentication]
-:MenuAMOrganizations: menu:Access Management[Organizations]
-:MenuAMTeams: menu:Access Management[Teams]
-:MenuAMUsers: menu:Access Management[Users]
-:MenuAMRoles: menu:Access Management[Roles]
-:MenuAMCredentials: menu:Access Management[Credentials]
-:MenuAMCredentialType: menu:Access Management[Credential Types]
+:MenuAMAuthentication: menu:{MenuAM}[Authentication]
+:MenuAMOrganizations: menu:{MenuAM}[Organizations]
+:MenuAMTeams: menu:{MenuAM}[Teams]
+:MenuAMUsers: menu:{MenuAM}[Users]
+:MenuAMRoles: menu:{MenuAM}[Roles]
+:MenuAMCredentials: menu:{MenuAM}[Credentials]
+:MenuAMCredentialType: menu:{MenuAM}[Credential Types]
 
 
 // Ansible Lightspeed menu selections
 // --- the following is not in the current build but may be added later ---
-//:MenuALSeatManagement: menu:Ansible Lightspeed[Seat Management]
+//:MenuALSeatManagement: menu:{MenuAL}[Seat Management]
