--- a/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
+++ b/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
@@ -10,9 +10,8 @@ You must download the public key before you add it to the local system keyring.
 .Procedure
 
 . Log in to your {PlatformNameShort}.
-+
-include::snippets/snip_menu-top-ac.adoc *{MenuACAdminSignatureKeys}*.
-+
+include::snippets/snip_menu-top-ac.adoc[]
+*{MenuACAdminSignatureKeys}*.
 The Signature Keys dashboard displays a list of multiple keys: collections and container images.
 
 * To verify collections, download the key prefixed with `collections-`.
