--- a/downstream/modules/hub/proc-set-community-remote.adoc
+++ b/downstream/modules/hub/proc-set-community-remote.adoc
@@ -24,9 +24,8 @@ collections:
 
 .Procedure
 . Log in to {PlatformNameShort}.
-+
-include::snippets/snip_menu-top-ac.adoc *{MenuACAdminRemotes}*.
-+
+include::snippets/snip_menu-top-ac.adoc[]
+*{MenuACAdminRemotes}*.
 . In the *Community* remote, click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Edit*.
 . In the *YAML requirements* field, click btn:[Browse] and locate the `requirements.yml` file on your local machine.
 . Click btn:[Save].
