--- a/downstream/modules/platform/ref-standalone-controller-hub-ext-database-inventory.adoc
+++ b/downstream/modules/platform/ref-standalone-controller-hub-ext-database-inventory.adoc
@@ -1,6 +1,6 @@
 [id="ref-single-controller-hub-ext-database-inventory"]
 
-= Single {ControllerName and single {HubName} with external (installer managed) database
+= Single {ControllerName} and single {HubName} with external (installer managed) database
 
 [role="_abstract"]
 Use this example to populate the inventory file to deploy single instances of {ControllerName} and {HubName} with an external (installer managed) database.
