Changed information on Hashicorp Vault
Corrections

Platform docs for hashivault ldap plugin

https://issues.redhat.com/browse/AAP-19787

--- a/downstream/modules/platform/ref-hashicorp-signed-ssh.adoc
+++ b/downstream/modules/platform/ref-hashicorp-signed-ssh.adoc
@@ -17,14 +17,16 @@ If it is not provided, Hashicorp Vault attempts to match the certificate automat
 * *Kubernetes role*: specify the role name when using Kubernetes authentication.
 * *Username*: enter the username of the user to be used to authenticate this service.
 * *Password*: enter the password associate with the user to be used to authenticate this service.
-* *Path to Auth*: specify a path if other than the default path of `/approle`
+* *Path to Auth*: specify a path if other than the default path of `/approle`.
+
+The following is an example of a configured HashiCorp SSH Secrets Engine credential.
+
+image:credentials-create-hashicorp-ssh-credential.png[HashiCorp SSH Secrets Engine credential]
+
+.Additional resources
 
 For more information about Approle authentication method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/approle[Vault documentation for Approle Auth Method].
 
 For more information about the Kubernetes authtication method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/kubernetes[Vault documentation for Kubernetes auth method].
 
 For more information about the TLS certificate auth method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/cert[Vault documentation for TLS certificates auth method].
-
-The following is an example of a configured HashiCorp SSH Secrets Engine credential.
-
-image:credentials-create-hashicorp-ssh-credential.png[HashiCorp SSH Secrets Engine credential]
