--- a/downstream/modules/platform/ref-hashicorp-vault-lookup.adoc
+++ b/downstream/modules/platform/ref-hashicorp-vault-lookup.adoc
@@ -16,24 +16,13 @@ If it is not provided, Hashicorp Vault attempts to match the certificate automat
 * *Namespace name*: specify the Namespace name (Hashicorp Vault enterprise only).
 * *Kubernetes role*: specify the role name when using Kubernetes authentication.
 * *Username*: enter the username of the user to be used to authenticate this service.
-* *Password*: enter the password associate with the user to be used to authenticate this service.
+* *Password*: enter the password associated with the user to be used to authenticate this service.
 * *Path to Auth*: specify a path if other than the default path of `/approle`.
 * *API Version* (required): select v1 for static lookups and v2 for versioned lookups.
-
-For more information about Approle authentication method and its fields, see the
-link:https://developer.hashicorp.com/vault/docs/auth/approle[Vault documentation for AppRole auth method]. 
 
 LDAP authentication requires LDAP to be configured in HashiCorp's Vault UI and a policy added to the user. 
 Cubbyhole is the name of the default secret mount. 
 If you have proper permissions, you can create other mounts and write key values to those. 
-
-For more detail about the LDAP authentication method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/ldap[Vault documentation for LDAP auth method].
-
-For more information about the userpass authentication method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/userpass[Vault documentation for userpass auth method].
-
-For more information about the Kubernetes auth method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/kubernetes[Vault documentation for Kubernetes auth method].
-
-For more detail about the TLS certificate auth method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/cert[Vault documentation for TLS certificates auth method].
 
 The following is an example of a configured HashiCorp Vault Secret Lookup credential for LDAP.
 
@@ -43,3 +32,15 @@ To test the lookup, create another credential that uses Hashicorp Vault lookup.
 The following example shows the metadata for a machine credential configured to look up hashicorp Vault secret credentials.
 
 image:credentials-machine-test-hashicorp-metadata.png[Example machine lookup for hashicorp Vault]
+
+.Additional resources
+For more detail about the LDAP authentication method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/ldap[Vault documentation for LDAP auth method].
+
+For more information about Approle authentication method and its fields, see the
+link:https://developer.hashicorp.com/vault/docs/auth/approle[Vault documentation for AppRole auth method]. 
+
+For more information about the userpass authentication method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/userpass[Vault documentation for userpass auth method].
+
+For more information about the Kubernetes auth method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/kubernetes[Vault documentation for Kubernetes auth method].
+
+For more information about the TLS certificate auth method and its fields, see the link:https://developer.hashicorp.com/vault/docs/auth/cert[Vault documentation for TLS certificates auth method].
