Changed information on Hashicorp Vault
Correction

Platform docs for hashivault ldap plugin

https://issues.redhat.com/browse/AAP-19787

--- a/downstream/modules/platform/ref-hashicorp-signed-ssh.adoc
+++ b/downstream/modules/platform/ref-hashicorp-signed-ssh.adoc
@@ -16,7 +16,7 @@ If it is not provided, Hashicorp Vault attempts to match the certificate automat
 * *Namespace name*: specify the Namespace name (Hashicorp Vault enterprise only).
 * *Kubernetes role*: specify the role name when using Kubernetes authentication.
 * *Username*: enter the username of the user to be used to authenticate this service.
-* *Password*: enter the password associate with the user to be used to authenticate this service.
+* *Password*: enter the password associated with the user to be used to authenticate this service.
 * *Path to Auth*: specify a path if other than the default path of `/approle`.
 
 The following is an example of a configured HashiCorp SSH Secrets Engine credential.
