AAP-17292: Added new content for configuring custom models feature' q

--- a/lightspeed/assemblies/assembly_configuring-custom-models.adoc
+++ b/lightspeed/assemblies/assembly_configuring-custom-models.adoc
@@ -10,24 +10,28 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-== Overview 
-As an organization administrator, you can create and use fine-tuned, custom models that are trained on your organization's existing Ansible content. This capability enables you to improve the code recommendation experience and tune the models to your organization's automation patterns. For example, you can use intellectual property information or private collections of Ansible data that are not open source to train a custom model. As a result, the code recommendations are tailored to your business requirements and processes.
+As an organization administrator, you can create and use fine-tuned, custom models that are trained on your organization's existing Ansible content. This capability enables you to tune the models to your organization's automation patterns and improve the code recommendation experience.
 
 You can configure multiple custom models for your organization. For example, you can create a custom model for your corporate IT automation team and a different one for your engineering team's infrastructure. You can also configure a custom model to make it available for all Ansible users or select Ansible users in your organization. 
 
-== Process
+== Process for configuring custom models
 
 To configure a custom model, perform the following tasks: 
 
-. Create a custom model training data set by using the Ansible content parser (URL)
+. Create a training data set by using {AnsibleContentParser} (xref)
 
-. Create and deploy a custom model by using {ibmwatsonxcodeassistant} (URL)
+. Create and deploy a custom model by using {ibmwatsonxcodeassistant} (xref)
 
-. Configure {LightspeedshortName} to use the newly-created custom model (URL)
+. Configure {LightspeedshortName} to use the newly-created custom model (xref)
 
-include::modules/proc_create-custom-models-content-parser.adoc[leveloffset=+1]
-
+include::modules/con_ansible-content-parser.adoc [leveloffset=+1]
+include::modules/proc_install-content-parser.adoc [leveloffset=+2]
+include::modules/proc_generate-training-data-set.adoc [leveloffset=+2]
+include::modules/proc_view-content-parser-output.adoc [leveloffset=+2]
+include::modules/proc_resolve-ansible-lint-rule-violations.adoc [leveloffset=+2]
+include::modules/proc_merge-multiple-jsonl-files.adoc [leveloffset=+2]
+include::modules/proc_create-deploy-custom-model-ibm.adoc [leveloffset=+1]
+include::modules/proc_configure-custom-models-lightspeed.adoc [leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
-
