--- a/lightspeed/assemblies/assembly_configuring-vscode-extension.adoc
+++ b/lightspeed/assemblies/assembly_configuring-vscode-extension.adoc
@@ -11,12 +11,12 @@ ifdef::context[:parent-context: {context}]
 [role="_abstract"]
 {LightspeedFullName} is integrated with the Ansible Visual Studio (VS) Code extension in VS Code. The Ansible VS Code extension, with {LightspeedFullName} features enabled, automatically collects recommendations, usage telemetry, and Ansible YAML file state through automated events. 
 
-To access {LightspeedShortName}, all Ansible users must install and configure the Ansible VS Code extension in their VS Code. The Ansible VS Code extension uses the Ansible-specific IBM watsonx Granite model configured in the Ansible Lightspeed administrator portal as the default mode for all users that have been assigned an Ansible Lightspeed seat. However, Ansible users can use the *model-override* setting in the Ansible VS Code extension settings to specify a different model ID. 
+To access {LightspeedShortName}, all Ansible users must install and configure the Ansible VS Code extension in their VS Code. The Ansible VS Code extension uses the Ansible-specific IBM watsonx Granite model configured in the {LightspeedShortName} administrator portal as the default mode for all users in your organization. 
+
+You can also use a custom, fine-tuned model if your organization administrator has created a custom model and has shared the model ID with you separately. You use the *model-override* setting in Ansible VS Code extension to override the default model, and use the custom model instead. Using a custom model enables you to improve the code recommendation experience and tune the model to your organizational automation patterns. For example, if you are using {LightspeedShortName} both as an organization administrator and an end user, you can test the custom model for select Ansible users before making it available for all users in your organization. For more information, see Configuring custom models (xref). 
 
 include::modules/proc_install-vscode-extension.adoc[leveloffset=+1]
 include::modules/proc_configure-vscode-extension.adoc[leveloffset=+1]
-
-
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
