--- a/lightspeed/attributes/attributes.adoc
+++ b/lightspeed/attributes/attributes.adoc
@@ -16,7 +16,7 @@
 :LightspeedShortName: Red Hat Ansible Lightspeed
 :LightspeedTechPreview: Ansible Lightspeed Technical Preview
 :AnsibleCodeBot: Ansible code bot
-:AnsibleContentParser: Ansible content parser
+:AnsibleContentParser: content parser tool
 :ibmwatsonxcodeassistant: IBM watsonx Code Assistant
 
 // Event-Driven Ansible
