--- a/lightspeed/modules/proc_create-custom-models-content-parser.adoc
+++ b/lightspeed/modules/proc_create-custom-models-content-parser.adoc
@@ -42,7 +42,7 @@ You must have installed one of the following OS on your computer:
 * Python version 3.10 or later.  
 * UNIX OS, such as Linux or Mac OS.  
 +
-NOTE: Installation on Microsoft Windows OS is not supported.
+NOTE: Installation of Ansible content parser on Microsoft Windows OS is not supported.
 +
 
 .Procedure
