--- a/lightspeed/modules/con_training-data.adoc
+++ b/lightspeed/modules/con_training-data.adoc
@@ -6,9 +6,17 @@
 
 == Models
 
-{LightspeedFullName} uses Ansible-specific IBM watsonx Granite models unique to your organization. These models are provided, managed, and maintained by IBM. 
+{LightspeedFullName} uses Ansible-specific IBM watsonx Granite models unique to your organization. These models are provided, managed, and maintained by IBM. You can use the Ansible-specific IBM watsonx Granite model as the default model for{LightspeedShortName}, so that all Ansible Lightspeed users in your organization can use the fine-tuned model. 
 
-You can use the Ansible-specific IBM watsonx Granite model as the default model for{LightspeedShortName}, so that all Ansible Lightspeed users in your organization can use the fine-tuned model. 
+You can use the following types of IBM watsonx Granite models with {LightspeedShortName}:
+
+* Base model
++
+A default model that enables all users in your organization to use generative AI with {LightspeedShortName}.
+
+* Custom or fine-tuned model
++
+Custom models that are fine-tuned on your organizational automation data to improve the code recommendation experience. You can configure the fine-tuned models for select Ansible users or for all users in your organization. For more information, see Configuring custom models (xref). 
 
 == Data sources
 
