--- a/downstream/titles/playbooks/playbooks-reference/master.adoc
+++ b/downstream/titles/playbooks/playbooks-reference/master.adoc
@@ -18,3 +18,4 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 include::{DocumentationFeedback}[leveloffset=+1]
 
 include::playbooks/assembly-reference-test.adoc[leveloffset=+1]
+include::playbooks/assembly-playbook-reference-intro.adoc[leveloffset=+1]
