update rpm and container releases headings

--- a/downstream/titles/release-notes/topics/installer-24-2.adoc
+++ b/downstream/titles/release-notes/topics/installer-24-2.adoc
@@ -38,7 +38,7 @@ link:https://access.redhat.com/errata/RHBA-2023:5347[RHBA-2023:5347]
 
 * Podman configurations are now correctly aligned to the {EDAName} home directory (AAP-13289)
 
-== Related bundle releases for RPM and container
+== Related RPM and container releases for bundle installer
 
 * link:https://access.redhat.com/errata/RHSA-2023:5208[RHSA-2023:5208]
 
