--- a/downstream/titles/release-notes/topics/installer-24-3.adoc
+++ b/downstream/titles/release-notes/topics/installer-24-3.adoc
@@ -27,7 +27,7 @@ link:https://access.redhat.com/errata/RHBA-2023:7460[RHBA-2023:7460]
 
 * Added a separate worker queue for {EDAName} activations to not interfere with application tasks such as project updates (AAP-14743)
 
-== Related bundle releases for RPM and container
+== Related RPM and container releases for bundle installer
 
 * link:https://access.redhat.com/errata/RHSA-2023:7517[RHSA-2023:7517]
 * link:https://access.redhat.com/errata/RHBA-2023:7460[RHBA-2023:7460]
