--- a/downstream/titles/release-notes/topics/installer-24-4.adoc
+++ b/downstream/titles/release-notes/topics/installer-24-4.adoc
@@ -20,7 +20,7 @@ link:https://access.redhat.com/errata/RHBA-2024:0104[RHBA-2024:0104]
 
 * Postgres certificates are now temporarily copied when checking the Postgres version for SSL mode 'verify-full' (AAP-15374)
 
-== Related bundle releases for RPM and container
+== Related RPM and container releases for bundle installer
 
 * link:https://access.redhat.com/errata/RHSA-2023:7773[RHSA-2023:7773]
 
