--- a/downstream/titles/release-notes/topics/installer-24-5.adoc
+++ b/downstream/titles/release-notes/topics/installer-24-5.adoc
@@ -21,7 +21,7 @@ link:https://access.redhat.com/errata/RHSA-2024:0733[RHSA-2024:0733]
 
 * Fixed an error that caused a manual installation failure when pinning {EDAName} to an older version (AAP-19399)
 
-== Related bundle releases for RPM and container
+== Related RPM and container releases for bundle installer
 
 * link:https://access.redhat.com/errata/RHSA-2024:0322[RHSA-2024:0322]
 
