--- a/lightspeed/assemblies/assembly_configuring-custom-models.adoc
+++ b/lightspeed/assemblies/assembly_configuring-custom-models.adoc
@@ -10,7 +10,7 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-As an organization administrator, you can create and use fine-tuned, custom models that are trained on your organization's existing Ansible content. This capability enables you to tune the models to your organization's automation patterns and improve the code recommendation experience.
+As an organization administrator, you can create and use fine-tuned, custom models that are trained on your organization's existing Ansible content. With this capability, you can tune the models to your organization's automation patterns and improve the code recommendation experience.
 
 You can configure multiple custom models for your organization. For example, you can create a custom model for your corporate IT automation team and a different one for your engineering team's infrastructure. You can also configure a custom model to make it available for all Ansible users or select Ansible users in your organization. 
 
@@ -18,11 +18,11 @@ You can configure multiple custom models for your organization. For example, you
 
 To configure a custom model, perform the following tasks: 
 
-. Create a training data set by using {AnsibleContentParser} (xref)
+. xref:ansible-content-parser_configuring-custom-models[Create a training data set by using {AnsibleContentParser}]
 
-. Create and deploy a custom model by using {ibmwatsonxcodeassistant} (xref)
+. xref:create-deploy-custom-model-ibm_configuring-custom-models[Create and deploy a custom model by using {ibmwatsonxcodeassistant}]
 
-. Configure {LightspeedshortName} to use the newly-created custom model (xref)
+. xref:configure-custom-models-lightspeed_configuring-custom-models[Configure {LightspeedshortName} to use the custom model]
 
 include::modules/con_ansible-content-parser.adoc [leveloffset=+1]
 include::modules/proc_install-content-parser.adoc [leveloffset=+2]
