updates based on peer review feedback

--- a/downstream/titles/release-notes/topics/bundle-installer-24-12.adoc
+++ b/downstream/titles/release-notes/topics/bundle-installer-24-12.adoc
@@ -11,7 +11,7 @@ link:https://access.redhat.com/errata/RHBA-2023:4621[RHBA-2023:4621]
 
 * Organization admin users are no longer shown an error on the Instances list (AAP-11195)
 
-* Fixed the workflow job within workflow approval to display the correct details (AAP-11433)
+* Fixed the workflow job within the workflow approval to display the correct details (AAP-11433)
 
 * Credential name search in the ad hoc commands prompt no longer requires case-sensitive input (AAP-11442)
 
