--- a/downstream/titles/release-notes/topics/bundle-installer-24-23.adoc
+++ b/downstream/titles/release-notes/topics/bundle-installer-24-23.adoc
@@ -6,7 +6,7 @@ link:https://access.redhat.com/errata/RHBA-2023:5886[RHBA-2023:5886]
 
 == General
 
-* receptor: golang: net/http, x/net/http2: rapid stream resets can cause excessive work [CVE-2023-44487] (link:https://access.redhat.com/security/cve/CVE-2023-39325[CVE-2023-39325])
+* receptor: golang: net/http, x/net/http2: rapid stream resets can cause excessive work (CVE-2023-44487) (link:https://access.redhat.com/security/cve/CVE-2023-39325[CVE-2023-39325])
 
 * receptor: golang: crypto/tls: slow verification of certificate chains containing large RSA keys (link:https://access.redhat.com/security/cve/CVE-2023-29409[CVE-2023-29409])
 
