--- a/downstream/titles/release-notes/topics/installer-24-3.adoc
+++ b/downstream/titles/release-notes/topics/installer-24-3.adoc
@@ -14,11 +14,11 @@ link:https://access.redhat.com/errata/RHBA-2023:7460[RHBA-2023:7460]
 
 * All {EDAName} services are enabled after installation is complete (AAP-17426)
 
-* Ensure all backup/restore staged files and directories are cleaned up before running backup/restore and marked for deletion after backup/restore (AAP-16101)
+* Ensure all backup and restore staged files and directories are cleaned up before running a backup or restore. You must also mark the files for deletion after a backup or restore (AAP-16101)
 
 * Updated nginx to 1.22 (AAP-15962)
 
-* Added a task to VMs that will run the `awx-manage` command to pre-create events table partition(s) before executing `pg_dump` and added a variable for the default number of hours to pre-create (AAP-15920)
+* Added a task to VMs that will run the `awx-manage` command to pre-create events table partitions before executing `pg_dump` and added a variable for the default number of hours to pre-create (AAP-15920)
 
 // Event-Driven Ansible
 == {EDAName}
