--- a/lightspeed/modules/proc_log-into-portal.adoc
+++ b/lightspeed/modules/proc_log-into-portal.adoc
@@ -10,6 +10,4 @@
 . Click menu:Log in[Log in with Red Hat].
 . Enter your Red Hat account username and password.
 
-{LightspeedShortName} uses {RHSSO} ({RHSSOshort}) to authenticate you, and verifies that you have an assigned seat license. If you have an assigned seat license, you can access Ansible Lightspeed and the login portal displays your assigned role. 
-
-
+On successful authentication, the login screen is displayed along with your username and your assigned user role.
