--- a/lightspeed/modules/proc_provide-feedback.adoc
+++ b/lightspeed/modules/proc_provide-feedback.adoc
@@ -18,7 +18,7 @@ NOTE: On the login screen of the link:https://c.ai.ansible.redhat.com/[Ansible L
 
 .Prerequisites
 
-* You have an assigned seat license to access {LightspeedFullName}.
+* You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
 
 .Procedure
 
