--- a/lightspeed/modules/proc_troubleshooting-vscode.adoc
+++ b/lightspeed/modules/proc_troubleshooting-vscode.adoc
@@ -12,17 +12,13 @@ The following scenarios are possible:
 To resolve this error, ensure that:
 
 ** Your organization administrator has configured {LightspeedShortName} for your organization. 
-** You have a valid {LightspeedShortName} seat license. 
+** You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
 * You have not configured the required Ansible VS code extension settings.
 ** To resolve this error, ensure that you have enabled the *Lightspeed:Enabled* and menu:Lightspeed[Suggestions:Enabled] settings. For more information, see xref:configure-vscode-extension_configuring-with-code-assistant[Configure the Ansible VS Code extension].
 
 * You receive a `Failure on completion requests` error when you make inference requests in VS Code.
 +
-If you have an assigned seat license for {LightspeedShortName} but your organization administrator has not configured an {ibmwatsonxcodeassistant} model for your organization, you will encounter a `Failure on completion requests` error when you make inference requests in VS Code. 
-
-* You are logged in using an account that does not have a valid {LightspeedShortName} seat license. 
-+
-If you logged in using an account that does not have an assigned seat license, you must log out and log in again. In VS Code, click the *Accounts* icon and sign in using your Red Hat account with an assigned seat license. 
+If you are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}, but your organization administrator has not configured an {ibmwatsonxcodeassistant} model for your organization, you will encounter a `Failure on completion requests` error when you make inference requests in VS Code. 
 
 * Your VS Code Workspace settings override user settings.
 +
