--- a/lightspeed/modules/con-lightspeed-about.adoc
+++ b/lightspeed/modules/con-lightspeed-about.adoc
@@ -8,12 +8,16 @@
 
 {LightspeedShortName} is the cloud service that enables integration of generative AI into Ansible Automation Platform. This document specifically describes the integration of {LightspeedFullName}.
 
+{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes {Galaxy}, GitHub, and Ansible Certified and Validated content. It is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
+
+== Accessing {LightspeedFullName}
+
 To use {LightspeedFullName}, your organization must have:
 
 * A trial or paid subscription to {PlatformNameShort} 
 * A trial or paid subscription to {ibmwatsonxcodeassistant}
 
-{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes {Galaxy}, GitHub, and Ansible Certified and Validated content. It is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
+By default, all Ansible users within your organization can access {LightspeedShortName}.
 
 == Benefits of using {LightspeedShortName}
 {LightspeedFullName} offers the following benefits: 
