--- a/lightspeed/modules/proc_log-out-of-portal.adoc
+++ b/lightspeed/modules/proc_log-out-of-portal.adoc
@@ -13,6 +13,6 @@ To log out of the Ansible Lightspeed Service, you must log out of both the Ansib
 ** Click the *Person* icon image:person-icon-vs-code.png[Person icon]. You will see a list of accounts that VS Code is logged into.
 ** Select menu:Ansible Lightspeed[Sign Out].
 * Log out of the Ansible Lightspeed portal:
-** Navigate to link:https://c.ai.ansible.redhat.com/[the Ansible Lightspeed portal login page].
+** Navigate to the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal login page].
 ** Click *Log out*.
 
