AAP-20603: Updated content per consumption-based pricing changes and WCA trials

--- a/lightspeed/modules/con_lightspeed-process.adoc
+++ b/lightspeed/modules/con_lightspeed-process.adoc
@@ -18,6 +18,7 @@ To use {LightspeedShortName}, ensure that you have the following components:
 * Red Hat customer Portal organization administrators can use this guide to: 
 ** xref:configure-code-assistant_lightspeed-user-guide[Connect {LightspeedShortName} to {ibmwatsonxcodeassistant} instance]
 ** xref:obtain-config-wca-and-model-id_configure-code-assistant[Configure the {ibmwatsonxcodeassistant} model that you want to use]
+** xref:configuring-custom-models_lightspeed-user-guide[Configure custom models] 
 * Ansible users (content developers and automators) can use this guide to: 
 ** xref:configuring-with-code-assistant_lightspeed-user-guide[Install and configure Ansible Visual Studio Code extension]
 ** xref:requesting-task-recommendations_lightspeed-user-guide[Request task recommendations]
