--- a/lightspeed/assemblies/assembly_logging-in-out-portal.adoc
+++ b/lightspeed/assemblies/assembly_logging-in-out-portal.adoc
@@ -10,18 +10,18 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-By default, all Ansible users within an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant} can access {LightspeedShortName}.
+By default, all Ansible users within an organization, that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}, can access {LightspeedShortName}.
 
-You can access Ansible Lightspeed through the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal]. After you enter your {RHSSO} ({RHSSOshort}) account credentials, your account is authenticated and access is granted. Your assigned user role is displayed on the login screen of Ansible Lightspeed portal. 
+You can access Ansible Lightspeed through the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal]. After you enter your {RHSSO} ({RHSSOshort}) account credentials, your account is authenticated and you are granted access. Your assigned user role is displayed on the login screen of the Ansible Lightspeed portal. 
 
 .User login scenarios
 [cols="50%,50%",options="header"]
 |====
 | *Scenario* | *Result*
 |You are a {RHSSOshort} user. +
-NOTE: This is the typical scenario for accessing as {LightspeedShortName} as an Ansible user.| You are routed to the {LightspeedShortName} paid commercial offering.
+NOTE: This is the typical scenario for accessing {LightspeedShortName} as an Ansible user.| You are routed to the {LightspeedShortName} paid commercial offering.
 |You are a {RHSSOshort} user, but your organization administrator has not configured {LightspeedShortName} to connect with {ibmwatsonxcodeassistant}.| You are routed to the {LightspeedShortName} paid commercial offering with a message that your organization administrator has not configured a model for your organization.
-|You are a {RHSSOshort} user but your organization does not have a trial or paid subscription to either {PlatformNameShort} or {ibmwatsonxcodeassistant}.|<AWAITING INFO. ABOUT RESULT>.
+|You are a {RHSSOshort} user but your organization does not have an active {PlatformNameShort} subscription.|<AWAITING INFO. ABOUT RESULT>.
 |====
 
 include::modules/proc_log-into-portal.adoc[leveloffset=+1]
