--- a/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
+++ b/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
@@ -12,11 +12,13 @@ link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_pl
 
 * PyPI (pypi.org) for any python packages required as collection dependencies.
 
-* RPM repositories such as the RHEL or UBI repositories (cdn.redhat.com) for adding or updating RPMs to the execution environment image, if needed. registry.redhat.io for access to the base container images.
+* RPM repositories such as the RHEL or UBI repositories (cdn.redhat.com) for adding or updating RPMs to the execution environment image, if needed. 
 
-* Building an execution environment image in a disconnected environment requires a mirror of content from these locations. See Importing Collections into private automation hub for information on importing collections from Ansible Galaxy or automation hub into a private automation hub.
+* registry.redhat.io for access to the base container images.
 
-Mirrored PyPI content once transferred into the disconnected network can be made available using a web server or an artifact repository like Nexus.  The RHEL and UBI repository content can be exported from an internet-facing Red Hat Satellite server, copied into the disconnected environment, then imported into a disconnected Satellite so it is available for building custom execution environments.  See ISS Export Sync in an Air-Gapped Scenario for details.
+Building an execution environment image in a disconnected environment requires a mirror of content from these locations. See Importing Collections into private automation hub for information on importing collections from Ansible Galaxy or automation hub into a private automation hub.
+
+Mirrored PyPI content once transferred into the disconnected network can be made available using a web server or an artifact repository like Nexus.  The RHEL and UBI repository content can be exported from an internet-facing Red Hat Satellite server, copied into the disconnected environment, then imported into a disconnected Satellite so it is available for building custom execution environments.  See link:https://https://access.redhat.com/documentation/en-us/red_hat_satellite/6.14/html-single/installing_satellite_server_in_a_disconnected_network_environment/index#iss_export_sync_in_an_air_gapped_scenario[ISS Export Sync in an Air-Gapped Scenario] for details.
 
 The default base container image, ee-minimal-rhel8, is used to create custom execution environment images and is included with the bundled installer. This image  will be added to the private automation hub at install time.  If a different base container image such as ee-minimal-rhel9 is required, it will need to be imported to the disconnected network and added to the private automation hub container registry.
 
